--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "styled-components": "^5.1.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
