--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-geocode": "^0.2.1",
     "react-google-autocomplete": "^1.2.4",
+    "react-google-maps": "^9.4.5",
     "react-google-places-autocomplete": "^2.0.5",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.2.0",
